# 2026_Analysis_07-GuessMyDrawing

./: .gitignore  .gitmodules  README.md
clang-tidy/: run_clang_tidy.sh
clang-tidy/results/: clang_tidy_report.txt
cppcheck/: run_cppcheck.sh
cppcheck/results/: cppcheck_report.txt
doxygen/: Doxyfile  run_doxygen.sh
doxygen/results/html/: Application_2main_8cpp.html  Application_2main_8cpp__incl.map  Application_2main_8cpp__incl.md5  Application_2main_8cpp_source.html  Application_2moc__predefs_8h.html  Application_2moc__predefs_8h_source.html  MessageReceivedEnum_8h.html  MessageReceivedEnum_8h__dep__incl.map  MessageReceivedEnum_8h__dep__incl.md5  MessageReceivedEnum_8h_source.html  MessageType_8h.html  MessageType_8h__dep__incl.map  MessageType_8h__dep__incl.md5  MessageType_8h__incl.map  MessageType_8h__incl.md5  MessageType_8h_source.html  ServerMessageEnum_8h.html  ServerMessageEnum_8h__dep__incl.map  ServerMessageEnum_8h__dep__incl.md5  ServerMessageEnum_8h_source.html  Server_2main_8cpp.html  Server_2main_8cpp__incl.map  Server_2main_8cpp__incl.md5  Server_2main_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.map  Server_2main_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.md5  Server_2main_8cpp_source.html  Server_2moc__predefs_8h.html  Server_2moc__predefs_8h_source.html  annotated.html  canvas_8cpp.html  canvas_8cpp__incl.map  canvas_8cpp__incl.md5  canvas_8cpp_source.html  canvas_8h.html  canvas_8h__dep__incl.map  canvas_8h__dep__incl.md5  canvas_8h__incl.map  canvas_8h__incl.md5  canvas_8h_source.html  canvasserializer_8cpp.html  (+696 more)
doxygen/results/html/search/: all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  (+58 more)
test/: CMakeLists.txt  run_coverage.sh  test_main.cpp
test/integration/: client_integration_test.cpp  server_integration_test.cpp
test/unit/: client_test.cpp  room_test.cpp  server_test.cpp  thread_test.cpp
valgrind/: run_valgrind.sh
valgrind-massif/: run_massif.sh
